syntax = "proto3";

import "google/protobuf/empty.proto";

service ManagerService {
    rpc Subscribe(WorkerInfo) returns (google.protobuf.Empty);
    rpc SendJob(JobPacket) returns (google.protobuf.Empty);
}

message WorkerInfo {
    string id = 1;
    string ip_address = 2;
}

message JobPacket {
    string job_id = 1;
    string artifact_url = 2;
}
